[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/main.rs"

[[bin]]
name = "day_6"
path = "src/day_6/main.rs"

[[bin]]
name = "day_7"
path = "src/day_7/main.rs"

[[bin]]
name = "day_8"
path = "src/day_8/main.rs"

[[bin]]
name = "day_9"
path = "src/day_9/main.rs"

[[bin]]
name = "day_10"
path = "src/day_10/main.rs"

[[bin]]
name = "day_11"
path = "src/day_11/main.rs"

# [[bin]]
# name = "day_12"
# path = "src/day_12/main.rs"

# [[bin]]
# name = "day_13"
# path = "src/day_13/main.rs"

# [[bin]]
# name = "day_14"
# path = "src/day_14/main.rs"

# [[bin]]
# name = "day_15"
# path = "src/day_15/main.rs"

# [[bin]]
# name = "day_16"
# path = "src/day_16/main.rs"

# [[bin]]
# name = "day_17"
# path = "src/day_17/main.rs"

# [[bin]]
# name = "day_18"
# path = "src/day_18/main.rs"

# [[bin]]
# name = "day_19"
# path = "src/day_19/main.rs"

# [[bin]]
# name = "day_20"
# path = "src/day_20/main.rs"

# [[bin]]
# name = "day_21"
# path = "src/day_21/main.rs"

# [[bin]]
# name = "day_22"
# path = "src/day_22/main.rs"

# [[bin]]
# name = "day_23"
# path = "src/day_23/main.rs"

# [[bin]]
# name = "day_24"
# path = "src/day_24/main.rs"

# [[bin]]
# name = "day_25"
# path = "src/day_25/main.rs"

[dependencies]
nom = "7.1.3"
itertools = "0.13.0"
ndarray = "0.16.1"
rangemap = "1.5.1"